welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:75: error: identifier expected but 'var' found.
def av(var n:Int)
       ^PictureMono2:85: error: ':' expected but '}' found.
}
^